--- a/shipping/index.html
+++ b/shipping/index.html
@@ -43,7 +43,7 @@
 
                 <div class="navbar-header">
 
-                    <img style="max-height:6em; max-width:12em;" src="\dcGoldenLogo2.png" >
+                    <img style="max-height:6em; max-width:12em;" src="\dcGoldenLogo3.png" >
 
                     <button class="navbar-toggle" data-target=".navbar-collapse" data-toggle="collapse">
                         <span class="icon-bar"></span>
@@ -82,12 +82,15 @@
 
   <div class="container" >
     <div class="row" >
-      <div class="col-xs-12" >
+      <div class="col-xs-6" >
+        <img style="margin:5em auto; height:25em;" src="\Stock Images\shipping-1078102_960_720.jpg" class="img-responsive" alt="container ship" >
+      </div>
+      <div class="col-xs-6" >
       
 
 <h1 id="shipping">Shipping</h1>
 
-<p>Some content here!</p>
+<p>Proin tempor convallis venenatis. Curabitur nec eros vel leo sodales hendrerit. Proin et dapibus metus. Vivamus nunc diam, porta eget convallis eget, volutpat non mi. Curabitur malesuada orci eu lectus posuere, quis ullamcorper libero elementum. Sed eu tristique tellus. Donec et vestibulum nisl, ut tempor massa. Nunc euismod, erat eu rutrum fringilla, quam turpis laoreet nisi, nec laoreet nisl mi at eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam vulputate faucibus volutpat. Sed fringilla nunc et turpis pretium bibendum. Donec vel semper nulla. Sed id neque luctus, egestas enim eget, ultrices dolor. Cras quis condimentum tellus.</p>
 
       </div>
     </div>
@@ -98,7 +101,7 @@
 
         <footer>
 
-            <p class="copyright text-muted">&copy; All rights reserved. Powered by <a href="https://gohugo.io">Hugo</a> and <a href="https://github.com/calintat/minimal">Minimal</a></p>
+            <p class="copyright text-muted">&copy; All rights reserved. Created by <a href="https://burgettconsulting.com">Burgett Consulting</a></p>
 
         </footer>
 
