--- a/404.html
+++ b/404.html
@@ -46,7 +46,7 @@
 
                 <div class="navbar-header">
 
-                    <img style="max-height:6em; max-width:12em;" src="\dcGoldenLogo2.png" >
+                    <img style="max-height:6em; max-width:12em;" src="\dcGoldenLogo3.png" >
 
                     <button class="navbar-toggle" data-target=".navbar-collapse" data-toggle="collapse">
                         <span class="icon-bar"></span>
@@ -95,7 +95,7 @@
 
         <footer>
 
-            <p class="copyright text-muted">&copy; All rights reserved. Powered by <a href="https://gohugo.io">Hugo</a> and <a href="https://github.com/calintat/minimal">Minimal</a></p>
+            <p class="copyright text-muted">&copy; All rights reserved. Created by <a href="https://burgettconsulting.com">Burgett Consulting</a></p>
 
         </footer>
 
