--- a/insurance/index.html
+++ b/insurance/index.html
@@ -43,7 +43,7 @@
 
                 <div class="navbar-header">
 
-                    <img style="max-height:6em; max-width:12em;" src="\dcGoldenLogo2.png" >
+                    <img style="max-height:6em; max-width:12em;" src="\dcGoldenLogo3.png" >
 
                     <button class="navbar-toggle" data-target=".navbar-collapse" data-toggle="collapse">
                         <span class="icon-bar"></span>
@@ -80,25 +80,51 @@
 
 <main>
 
-      <div class="container" >
-        <div class="row" >
-          <div class="col-xs-12" >
-          
+  <div class="container" >
+    <div class="row" >
+      <div class="col-xs-12" >
+        
 
 <h1 id="insurance">Insurance</h1>
 
 <p>Some content here!</p>
 
-          </div>
-        </div>
       </div>
-
+    <div class="row" >
+      <div class="col-xs-6" >
+        <img style="margin:5em auto; height:25em;" src="\Stock Images\StockSnap_CMFLFVFD9L.jpg" class="img-responsive" alt="container ship" >
+      </div>
+      <div class="col-xs-6">
+        <h2>Life</h2>
+        <p>Some Text Here</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-6" >
+        <img style="margin:5em auto; height:25em;" src="\Stock Images\Modern grandmother EveryPixel.com.jpg" class="img-responsive" alt="container ship" >
+      </div>
+      <div class="col-xs-6">
+        <h2>Health</h2>
+        <p>Some Text Here</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-6" >
+        <img style="margin:5em auto; height:25em;" src="\Stock Images\shipping-1078102_960_720.jpg" class="img-responsive" alt="container ship" >
+      </div>
+      <div class="col-xs-6">
+        <h2>Accident</h2>
+        <p>Some Text Here</p>
+      </div>
+    </div>
+  </div>
+  </div>
 
 </main>
 
         <footer>
 
-            <p class="copyright text-muted">&copy; All rights reserved. Powered by <a href="https://gohugo.io">Hugo</a> and <a href="https://github.com/calintat/minimal">Minimal</a></p>
+            <p class="copyright text-muted">&copy; All rights reserved. Created by <a href="https://burgettconsulting.com">Burgett Consulting</a></p>
 
         </footer>
 
