--- a/procurement/index.html
+++ b/procurement/index.html
@@ -43,7 +43,7 @@
 
                 <div class="navbar-header">
 
-                    <img style="max-height:6em; max-width:12em;" src="\dcGoldenLogo2.png" >
+                    <img style="max-height:6em; max-width:12em;" src="\dcGoldenLogo3.png" >
 
                     <button class="navbar-toggle" data-target=".navbar-collapse" data-toggle="collapse">
                         <span class="icon-bar"></span>
@@ -82,13 +82,16 @@
 
   <div class="container" >
     <div class="row" >
-      <div class="col-xs-12" >
+      <div class="col-xs-6" >
       
 
 <h1 id="procurement">Procurement</h1>
 
 <p>Some content here!</p>
 
+      </div>
+      <div class="col-xs-6" >
+        <img style="margin:5em auto; height:25em;" src="\Stock Images\StockSnap_U2OWEI2S84.jpg" class="img-responsive" alt="container ship" >
       </div>
     </div>
   </div>
@@ -98,7 +101,7 @@
 
         <footer>
 
-            <p class="copyright text-muted">&copy; All rights reserved. Powered by <a href="https://gohugo.io">Hugo</a> and <a href="https://github.com/calintat/minimal">Minimal</a></p>
+            <p class="copyright text-muted">&copy; All rights reserved. Created by <a href="https://burgettconsulting.com">Burgett Consulting</a></p>
 
         </footer>
 
