--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 <link rel="stylesheet" href="/css/main.css">
 
 
+<link rel="stylesheet" href="\css\carousel.css">
+
+
 <link rel="stylesheet" href="\css\bootstrap.min.css">
  
 <script src="\js\jquery-3.2.1.min.js"></script>
@@ -100,10 +103,7 @@
             <img style="margin:5em auto;" src="\ustoamap.jpg" class="img-responsive" alt="kenyan flag" >
           </div>
         </div>
-        <div class="row" style="margin-left:0; margin-right:0;">
-          <div class="col-sm-12" style="background-color:red; height:0.5em;">
-          </div>
-        </div>
+        <hr class="featurette-divider">
         <div class="row">
           <div class="col-lg-12" >
             <h2 style="margin-top:2em;">Contact Us</h2>
