--- a/procurement/index.html
+++ b/procurement/index.html
@@ -22,6 +22,9 @@
 <link rel="stylesheet" href="/css/main.css">
 
 
+<link rel="stylesheet" href="\css\carousel.css">
+
+
 <link rel="stylesheet" href="\css\bootstrap.min.css">
  
 <script src="\js\jquery-3.2.1.min.js"></script>
@@ -79,22 +82,19 @@
 
 
 <main>
-
-  <div class="container" >
-    <div class="row" >
-      <div class="col-xs-6" >
-      
-
-<h1 id="procurement">Procurement</h1>
-
-<p>Some content here!</p>
-
-      </div>
-      <div class="col-xs-6" >
-        <img style="margin:5em auto; height:25em;" src="\Stock Images\StockSnap_U2OWEI2S84.jpg" class="img-responsive" alt="container ship" >
-      </div>
-    </div>
+  <div class="container">
+        <div class="row featurette" style="margin-top:2em;">
+          <div class="col-md-7">
+            <h1 class="featurette-heading">Procurement<br><span class="text-muted">How do we get our products?</span></h1>
+            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          </div>
+          <div class="col-md-5">
+            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Beans and Rice Bags" src="\Stock Images\StockSnap_U2OWEI2S84.jpg" data-holder-rendered="true">
+          </div>
+        </div>
+      <hr class="featurette-divider">
   </div>
+
 
 
 </main>
