--- a/404.html
+++ b/404.html
@@ -22,6 +22,9 @@
 <link rel="stylesheet" href="/css/main.css">
 
 
+<link rel="stylesheet" href="\css\carousel.css">
+
+
 <link rel="stylesheet" href="\css\bootstrap.min.css">
  
 <script src="\js\jquery-3.2.1.min.js"></script>
