--- a/insurance/index.html
+++ b/insurance/index.html
@@ -22,6 +22,9 @@
 <link rel="stylesheet" href="/css/main.css">
 
 
+<link rel="stylesheet" href="\css\carousel.css">
+
+
 <link rel="stylesheet" href="\css\bootstrap.min.css">
  
 <script src="\js\jquery-3.2.1.min.js"></script>
@@ -79,46 +82,43 @@
 
 
 <main>
+    <div class="container">
+      <div class="container marketing">
+        <div class="row">
+          <div class="col-lg-12 col-md-12">
+            <h1 class="featurette-heading">Insurance<br><span class="text-muted">How can we protect you?</span></h1>
+            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          </div>
+        </div>
+        <hr class="featurette-divider">
+        <div class="row">
+          <div class="col-lg-4 col-md-4" style="padding-bottom:2em;">
+            <img class="img-circle" src="\Stock Images\StockSnap_CMFLFVFD9L.jpg" alt="Life Insurance" width="140" height="140">
+            <h2>Life</h2>
+            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
 
-  <div class="container" >
-    <div class="row" >
-      <div class="col-xs-12" >
-        
-
-<h1 id="insurance">Insurance</h1>
-
-<p>Some content here!</p>
-
-      </div>
-    <div class="row" >
-      <div class="col-xs-6" >
-        <img style="margin:5em auto; height:25em;" src="\Stock Images\StockSnap_CMFLFVFD9L.jpg" class="img-responsive" alt="container ship" >
-      </div>
-      <div class="col-xs-6">
-        <h2>Life</h2>
-        <p>Some Text Here</p>
+          </div>
+          <div class="col-lg-4 col-md-4" style="padding-bottom:2em;">
+            <img class="img-circle" src="\Stock Images\Modern grandmother EveryPixel.com.jpg" alt="Health Insurance" width="140" height="140">
+            <h2>Health</h2>
+            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+          </div>
+          <div class="col-lg-4 col-md-4" style="padding-bottom:2em;">
+            <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Accident Insurance" width="140" height="140">
+            <h2>Accident</h2>
+            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <p>Contact us for more details on any of our insurance services</p>
+            <p><a class="btn btn-default" href="/" role="button">Contact Us »</a></p>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-xs-6" >
-        <img style="margin:5em auto; height:25em;" src="\Stock Images\Modern grandmother EveryPixel.com.jpg" class="img-responsive" alt="container ship" >
-      </div>
-      <div class="col-xs-6">
-        <h2>Health</h2>
-        <p>Some Text Here</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-6" >
-        <img style="margin:5em auto; height:25em;" src="\Stock Images\shipping-1078102_960_720.jpg" class="img-responsive" alt="container ship" >
-      </div>
-      <div class="col-xs-6">
-        <h2>Accident</h2>
-        <p>Some Text Here</p>
-      </div>
-    </div>
-  </div>
-  </div>
+
+
 
 </main>
 
