--- a/shipping/index.html
+++ b/shipping/index.html
@@ -22,6 +22,9 @@
 <link rel="stylesheet" href="/css/main.css">
 
 
+<link rel="stylesheet" href="\css\carousel.css">
+
+
 <link rel="stylesheet" href="\css\bootstrap.min.css">
  
 <script src="\js\jquery-3.2.1.min.js"></script>
@@ -81,19 +84,18 @@
 <main>
 
   <div class="container" >
-    <div class="row" >
-      <div class="col-xs-6" >
-        <img style="margin:5em auto; height:25em;" src="\Stock Images\shipping-1078102_960_720.jpg" class="img-responsive" alt="container ship" >
+
+    <div class="row featurette" style="margin-top:2em;">
+      <div class="col-md-7 col-md-push-5">
+        <h1 class="featurette-heading">Shipping<br><span class="text-muted">Where do we ship?</span></h1>
+        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
       </div>
-      <div class="col-xs-6" >
-      
-
-<h1 id="shipping">Shipping</h1>
-
-<p>Proin tempor convallis venenatis. Curabitur nec eros vel leo sodales hendrerit. Proin et dapibus metus. Vivamus nunc diam, porta eget convallis eget, volutpat non mi. Curabitur malesuada orci eu lectus posuere, quis ullamcorper libero elementum. Sed eu tristique tellus. Donec et vestibulum nisl, ut tempor massa. Nunc euismod, erat eu rutrum fringilla, quam turpis laoreet nisi, nec laoreet nisl mi at eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam vulputate faucibus volutpat. Sed fringilla nunc et turpis pretium bibendum. Donec vel semper nulla. Sed id neque luctus, egestas enim eget, ultrices dolor. Cras quis condimentum tellus.</p>
-
+      <div class="col-md-5 col-md-pull-7">
+        <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="\Stock Images\shipping-1078102_960_720.jpg" alt="Generic placeholder image">
       </div>
     </div>
+
+    <hr class="featurette-divider">
   </div>
 
 
