--- a/procurement/index.html
+++ b/procurement/index.html
@@ -83,16 +83,24 @@
 
 <main>
   <div class="container">
-        <div class="row featurette" style="margin-top:2em;">
-          <div class="col-md-7">
+        <div class="row featurette">
+          <div class="col-md-7 matchHeight">
             <h1 class="featurette-heading">Procurement<br><span class="text-muted">How do we get our products?</span></h1>
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
           </div>
-          <div class="col-md-5">
-            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Beans and Rice Bags" src="\Stock Images\StockSnap_U2OWEI2S84.jpg" data-holder-rendered="true">
+          <div class="col-md-5 matchHeight">
+            <img class="featurette-image img-responsive center-block" alt="" src="\Stock Images\StockSnap_IA1A0DATOJ.jpg" data-holder-rendered="true">
           </div>
         </div>
       <hr class="featurette-divider">
+      <div class="row featurette">
+        <div class="col-md-7 col-md-push-5 matchHeight">
+          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        </div>
+        <div class="col-md-5 col-md-pull-7 matchHeight">
+          <img class="featurette-image img-responsive center-block" src="\Stock Images\StockSnap_3GYWTHCYVC.jpg" alt="excavator" >
+        </div>
+      </div>
   </div>
 
 
