--- a/shipping/index.html
+++ b/shipping/index.html
@@ -85,17 +85,15 @@
 
   <div class="container" >
 
-    <div class="row featurette" style="margin-top:2em;">
-      <div class="col-md-7 col-md-push-5">
-        <h1 class="featurette-heading">Shipping<br><span class="text-muted">Where do we ship?</span></h1>
+    <div class="row featurette">
+      <div class="col-md-7 col-md-push-5 matchHeight">
+        <h1 class="featurette-heading">Shipping<br><span class="text-muted">How do we ship?</span></h1>
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
       </div>
-      <div class="col-md-5 col-md-pull-7">
+      <div class="col-md-5 col-md-pull-7 matchHeight">
         <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="\Stock Images\shipping-1078102_960_720.jpg" alt="Generic placeholder image">
       </div>
     </div>
-
-    <hr class="featurette-divider">
   </div>
 
 
