--- a/index.html
+++ b/index.html
@@ -85,28 +85,28 @@
 
 
 <main>
-
-      <div class="hero_image" >
-        
+        <div class="leadText">
+          <h1 style="margin:1em auto;">This should be your slogan!</h1>
+        </div>
         <img src="\Stock Images\upScaledContainers2.jpg" class="img-responsive" alt="container ship" >
-      </div>
 
       <div class="container" style="padding:0;" >
-        <div class="row" style="margin-left:0; margin-right:0; margin-bottom:3em;" >
-          <div class="col-sm-12">
-            <h2 style="margin-top:2em;">About Us</h2>
+        <div class="row featurette" >
+          <div class="col-md-7 matchHeight">
+            <h2 class="featurette-heading">About Us</h2>
+            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
           </div>
-          <div class="col-sm-6">
-            <p style="margin:5em 1em;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla imperdiet, dolor sed viverra scelerisque, orci velit vulputate leo, quis consectetur lorem quam et lacus. Donec tristique dolor vel egestas gravida. Etiam et iaculis est, eget bibendum ante. Sed imperdiet imperdiet urna, non condimentum urna dapibus vel. Suspendisse potenti. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec efficitur, purus eu mollis mollis, turpis nibh imperdiet dui, quis malesuada velit urna ac velit. In et volutpat lectus. Proin ut rhoncus nunc, quis iaculis magna. Nullam quis mi blandit, laoreet libero sed, sollicitudin libero. Maecenas porttitor porta ipsum malesuada vehicula. Ut odio nulla, finibus vel urna eu, cursus laoreet nisl. Phasellus nec leo ac nisi aliquet laoreet at id eros.</p>
-          </div>
-          <div class="col-sm-6" style="height:25em;">
-            <img style="margin:5em auto;" src="\ustoamap.jpg" class="img-responsive" alt="kenyan flag" >
+          <div class="col-md-5 matchHeight">
+            <img class="featurette-image img-responsive center-block" data-src="\ustoamap.jpg" src="\ustoamap.jpg" alt="Route Map" style="margin-top:120px;">
           </div>
         </div>
+
         <hr class="featurette-divider">
+
+        <a name="contactUs"/></a>
         <div class="row">
           <div class="col-lg-12" >
-            <h2 style="margin-top:2em;">Contact Us</h2>
+            <h2 class="featurette-heading" >Contact Us</h2>
             <p style="margin:2em auto;">If you wish to inquire further about our services, please use the form below.</p>
             <form style="margin:5em 2em;"  action="//formspree.io/daniel.burgett@gmail.com" method="POST" name="sentMessage" id="contactForm">
 
