--- a/insurance/index.html
+++ b/insurance/index.html
@@ -86,7 +86,7 @@
       <div class="container marketing">
         <div class="row">
           <div class="col-lg-12 col-md-12">
-            <h1 class="featurette-heading">Insurance<br><span class="text-muted">How can we protect you?</span></h1>
+            <h1 class="featurette-heading" style="margin-top:4em;">Insurance<br><span class="text-muted">How can we protect you?</span></h1>
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
           </div>
         </div>
@@ -104,15 +104,15 @@
             <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
           </div>
           <div class="col-lg-4 col-md-4" style="padding-bottom:2em;">
-            <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Accident Insurance" width="140" height="140">
+            <img class="img-circle" src="\Stock Images\Everything will be all right EveryPixel.com.jpg" alt="Accident Insurance" width="140" height="140">
             <h2>Accident</h2>
             <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
           </div>
         </div>
-        <div class="row">
+        <div class="row" style="margin:3em auto;">
           <div class="col-lg-12">
             <p>Contact us for more details on any of our insurance services</p>
-            <p><a class="btn btn-default" href="/" role="button">Contact Us »</a></p>
+            <p><a class="btn btn-default" href="/#contactUs" role="button">Contact Us »</a></p>
           </div>
         </div>
       </div>
