--- a/index.html
+++ b/index.html
@@ -85,11 +85,10 @@
 
 
 <main>
-        <div class="leadText">
-          <h1 style="margin:1em auto;">This should be your slogan!</h1>
-        </div>
-        <img src="\Stock Images\upScaledContainers2.jpg" class="img-responsive" alt="container ship" >
-
+      <div class="leadText">
+        <h1 >This should be your slogan!</h1>
+      </div>
+      <img src="\Stock Images\upScaledContainers2.jpg" class="img-responsive centerSuperHighRez" alt="container ship" >
       <div class="container" style="padding:0;" >
         <div class="row featurette" >
           <div class="col-md-7 matchHeight">
@@ -97,7 +96,7 @@
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
           </div>
           <div class="col-md-5 matchHeight">
-            <img class="featurette-image img-responsive center-block" data-src="\ustoamap.jpg" src="\ustoamap.jpg" alt="Route Map" style="margin-top:120px;">
+            <img class="featurette-image img-responsive center-block" data-src="\ustoamap.jpg" src="\ustoamap.jpg" alt="Route Map">
           </div>
         </div>
 
