Updating site with new text

--- a/insurance/index.html
+++ b/insurance/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="DV Golden Time Shipping and Insurance is dedicated to connecting the Kenyan and American consumer markets, as well as providing low cost and high value insurance to the everyday American." >
         <title>Insurance</title>
         <style>
 
@@ -47,8 +48,6 @@
                 <div class="navbar-header">
 
                     <img style="max-height:6em; max-width:12em;" src="\dcGoldenLogo3.png" >
-
-                    <h1>DV Golden Time</h1>
 
                     <button class="navbar-toggle" data-target=".navbar-collapse" data-toggle="collapse">
                         <span class="icon-bar"></span>
