Adding gmail mx records

--- a/404.html
+++ b/404.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="DV Golden Time Shipping and Insurance is dedicated to connecting the Kenyan and American consumer markets, as well as providing low cost and high value insurance to the everyday American." >
+        <meta name="google-site-verification" content="_rblXeIMS7rVZjjrkvrkqOK46CguJXt8Vnfflhf83B8" />
         <title>404 Page not found</title>
         <style>
 
