--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="row featurette" >
           <div class="col-md-7 matchHeight">
             <h2 class="featurette-heading">About DV Golden Time</h2>
-            <p class="lead">Our company focuses on two goals. <br> First we enable Kenyans to enjoy American consumer goods by bringing American products and mechandise to the Kenyan market.  <br>  Second, we offer insurance to protect American families and provide them with financial security.</p>
+            <p class="lead">Our company focuses on two goals. <br>  First we offer insurance to protect American families and provide them with financial security. <br> Second, we enable Kenyans to enjoy American consumer goods by bringing American products and mechandise to the Kenyan market.  </p>
           </div>
           <div class="col-md-5 matchHeight">
             <img class="featurette-image img-responsive center-block" data-src="\ustoamap.jpg" src="\ustoamap.jpg" alt="Route Map">
