--- a/procurement/index.html
+++ b/procurement/index.html
@@ -102,7 +102,7 @@
         <div class="col-md-7 col-md-push-5 matchHeight">
           <p class="lead">
             Customers are updated during every step of the procurement and delivery process.  <br> 
-            We give customers are their choice of brand and manufacturer when choosing manufacturing or agricultural equipment.
+            We give customers their choice of brand and manufacturer when choosing manufacturing or agricultural equipment.
           </p>
         </div>
         <div class="col-md-5 col-md-pull-7 matchHeight">
