--- a/shipping/index.html
+++ b/shipping/index.html
@@ -91,7 +91,7 @@
       <div class="col-md-7 col-md-push-5 matchHeight">
         <h1 class="featurette-heading">Shipping<br><span class="text-muted">How do we ship?</span></h1>
         <p class="lead">
-          Our company takes custom orders for American goods and equipment from Kenyans.  We customize the shipping and logistics based on customer needs.  All parts of the shopping process from initial procurement of products to port discharge in Kenya is handled <span style="white-space:nowrap;">by our agents.</span> <br> Our partner OKMMA BROTHERS INTERNATIONAL CO. LTD. delivers the final product to the consumer.
+          Our company takes custom orders for American goods and equipment.  We customize the shipping and logistics based on customer needs.  All parts of the shopping process from initial procurement of products to port discharge in Kenya are handled <span style="white-space:nowrap;">by our agents.</span> <br> Our partner OKMMA BROTHERS INTERNATIONAL CO. LTD. delivers the final product to the consumer.
         </p>
       </div>
       <div class="col-md-5 col-md-pull-7 matchHeight">
