--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <body>
 
-        <nav class="navbar navbar-default navbar-fixed-top">
+        <!-- <nav class="navbar navbar-default navbar-fixed-top">
 
             <div class="container">
 
@@ -77,19 +77,21 @@
 
             </div>
 
-        </nav>
+        </nav> -->
 
 
 <main>
-      <h2 class="leadText">Always on time, its Golden Time!</h2>
-      <img src="\Stock Images\upScaledContainers2.jpg" class="img-responsive centerSuperHighRez" alt="container ship" >
+      <!-- <h2 class="leadText">Always on time, its Golden Time!</h2> -->
+      <h2 class="leadText" style="color: red;">The owner of this site has stopped paying their bill!</h2>
+      <!-- <img src="\Stock Images\upScaledContainers2.jpg" class="img-responsive centerSuperHighRez" alt="container ship" > -->
+      <img src="\Stock Images\money-pink-coins-pig-9660.jpg" class="img-responsive centerSuperHighRez" alt="container ship" >
       <div class="container" style="padding:0;" >
         
 
         <hr class="featurette-divider">
 
         <a name="contactUs"/></a>
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-lg-12" >
             <h2 class="featurette-heading" >Contact Us</h2>
             <p style="margin:2em auto;">If you wish to inquire further about our services, please use the form below.</p>
@@ -149,7 +151,7 @@
               </fieldset>
             </form>
           </div>
-        </div>
+        </div> -->
       </div>
 
 
