one last update

--- a/index.html
+++ b/index.html
@@ -155,13 +155,14 @@
       </div>
 
 
+      <p class="copyright text-muted">© All rights reserved. Created by <a href="https://burgettconsulting.com">Burgett Consulting</a></p>
 </main>
 
-        <footer>
+        <!-- <footer>
 
             <p class="copyright text-muted">© All rights reserved. Created by <a href="https://burgettconsulting.com">Burgett Consulting</a></p>
 
-        </footer>
+        </footer> -->
 
     </body>
 
